Fix toolbar alignment

--- a/src/styles/card.less
+++ b/src/styles/card.less
@@ -7,24 +7,24 @@
 @card-margin-xsm: @card-border-xsm;
 @gameboard-width-xsm: (@card-width-xsm + 2 * @card-margin-xsm) * 4;
 
-@card-border-radius-sm: 5px;
-@card-width-sm: 100px;
+@card-border-radius-sm: 4px;
+@card-width-sm: 90px;
 @card-height-sm: (3 * @card-width-sm)/2;
 @card-fonticon-size-sm: (2 * @card-width-sm)/3;
 @card-border-sm: (@card-width-sm)/16;
 @card-margin-sm: @card-border-sm;
 @gameboard-width-sm: (@card-width-sm + 2 * @card-margin-sm) * 4;
 
-@card-border-radius-md: 7px;
-@card-width-md: 150px;
+@card-border-radius-md: 5px;
+@card-width-md: 100px;
 @card-height-md: (3 * @card-width-md)/2;
 @card-fonticon-size-md: (2 * @card-width-md)/3;
 @card-border-md: (@card-width-md)/16;
 @card-margin-md: @card-border-md;
 @gameboard-width-md: (@card-width-md + 2 * @card-margin-md) * 4;
 
-@card-border-radius-lg: 10px;
-@card-width-lg: 200px;
+@card-border-radius-lg: 7px;
+@card-width-lg: 120px;
 @card-height-lg: (3 * @card-width-lg)/2;
 @card-fonticon-size-lg: (2 * @card-width-lg)/3;
 @card-border-lg: (@card-width-lg)/16;
